AAE-41502 Work on suggestions